Object oriented refactor and lazy loading added.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="input-group">
             <div class="form-group has-clear">
               <input id="zipCode" type="text" class="form-control" placeholder="Zip code">
-              <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+              <span class="form-control-clear glyphicon glyphicon-remove-circle form-control-feedback hidden"></span>
             </div>
             <span class="input-group-btn">
               <button id="searchButton" class="btn btn-default" type="submit">
@@ -54,6 +54,7 @@
     <div class="container">
       <div id="petResults" class="row"></div>
     </div>
+    <button id="loadMore" class="btn btn-block btn-primary" style="display:none">Load More</button>
   </div> <!-- content -->
 
   <div class="modal fade" id="petModal">
