Add resetPage function

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     </div><!--/.container-fluid -->
   </nav>
 
+  <div id="error"></div>
+
   <div id="content">
     <div class="jumbotron">
       <div class="container">
