--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <a class="navbar-brand" href="index.html">Pet Finder</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-        </ul>
+        <!-- <ul class="nav navbar-nav">
+        </ul> -->
         <form id="petSearchForm" class="navbar-form navbar-right">
           <div class="input-group">
             <div class="form-group has-clear">
@@ -38,8 +38,8 @@
             </span>
           </div>
         </form>
-        <ul class="nav navbar-nav navbar-right">
-        </ul>
+        <!-- <ul class="nav navbar-nav navbar-right">
+        </ul> -->
       </div><!--/.nav-collapse -->
     </div><!--/.container-fluid -->
   </nav>
@@ -73,8 +73,7 @@
 
 </body>
 
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
